<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fukuoka20150206_Kihon</string>
    <string name="hello_world">メニューを選択してください。\n※Settingsは動作しません。</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sample1">Sample1</string>
    <string name="action_sample1">Sample1</string>
    <string name="title_activity_sample2">Sample2:LinearLayout</string>
    <string name="action_sample2">Sample2:LinearLayout</string>
    <string name="title_activity_sample_activity3">Sample3:TableLayout</string>
    <string name="action_sample3">Sample3:TableLayout</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="action_sample4">Sample4:event</string>
    <string name="title_activity_sample_activity4">Sample4:event</string>
    <string name="action_sample5">Sample5:event</string>
    <string name="title_activity_sample_activity5">Sample5:event</string>

</resources>
