<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sample1" android:title="@string/action_sample1"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sample2" android:title="@string/action_sample2"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sample3" android:title="@string/action_sample3"
       android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sample4" android:title="@string/action_sample4"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sample5" android:title="@string/action_sample5"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
